[feat]新增开发测试环境下微吼云配置

--- a/medical-provider/src/main/resources/env-dev-local/config.properties
+++ b/medical-provider/src/main/resources/env-dev-local/config.properties
@@ -52,3 +52,6 @@ online.apprentice.apply.fail.sms.code=SMS_139229517
 online.treatment.apply.success.sms.code=SMS_139976012
 online.treatment.apply.fail.sms.code=SMS_139971008
 online.treatment.apply.cancel.sms.code=SMS_140730221
+
+vhallyun.appid=fbc17706
+vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
