--- a/online-manager/src/main/resources/env-dev-local/config.properties
+++ b/online-manager/src/main/resources/env-dev-local/config.properties
@@ -95,3 +95,6 @@ weixin.course.admin.apply.code=MxjG91sUtiW0gQN6kucni69ckTh8xb9azUGMUQ7Si2Q
 
 weixin.enchashment.pass.code=MinyAEo_YPq2hff3xqb2h6TByOGLXjhm1QT-iYgx3AY
 weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
+
+vhallyun.appid=fbc17706
+vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
