--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -131,3 +131,6 @@ minimum_amount=0.01
 iphone.iap.url=https://sandbox.itunes.apple.com/verifyReceipt
 
 ios.check.version=0.0.0
+
+vhallyun.appid=fbc17706
+vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
