--- a/course-provider/src/main/resources/env-dev-local/config.properties
+++ b/course-provider/src/main/resources/env-dev-local/config.properties
@@ -53,3 +53,6 @@ solr.heiht.pre=<span style="color: red">
 #高亮后缀
 solr.heiht.post=</span>
 solr.core = courses
+
+vhallyun.appid=fbc17706
+vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
