--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -95,3 +95,6 @@ weixin.enchashment.not.pass.code=5ZLK7U7BfAbR6IMwsEHh2v_PDDImPLQj9RP-AnbmrI0
 
 weixin.anchor.approve.pass.code=S6C2KXvldN5tel7GBZbjIi0rkGDq_MHrR-Qo9767qkU
 weixin.anchor.approve.not.pass.code=VQIFb8GogwSCncJwGCNCOXtESnFAnw9L6z2ncJ1HHkM
+
+vhallyun.appid=fbc17706
+vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
