[feat]新增正式环境下微吼云配置

--- a/course-provider/src/main/resources/env-prod/config.properties
+++ b/course-provider/src/main/resources/env-prod/config.properties
@@ -54,3 +54,6 @@ solr.heiht.pre=<span style="color: red">
 #高亮后缀
 solr.heiht.post=</span>
 solr.core = courses
+
+vhallyun.appid=285e36eb
+vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
