--- a/online-web/src/main/resources/env-prod/config.properties
+++ b/online-web/src/main/resources/env-prod/config.properties
@@ -100,3 +100,6 @@ email.receiver=yuruixin@ixincheng.com
 
 weixin.course.pay.code=aNmdSq3jv6FFUQ8LK57qQZpTwGKkEW1DnRN850818V0
 weixin.course.remind.code=u3oPlF212ELKH6TVypCmZveiUfbV1myCm5Na19CGeZk
+
+vhallyun.appid=285e36eb
+vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
