--- a/wechat/src/main/resources/env-prod/config.properties
+++ b/wechat/src/main/resources/env-prod/config.properties
@@ -134,3 +134,6 @@ minimum_amount=0.01
 iphone.iap.url=https://buy.itunes.apple.com/verifyReceipt
 
 ios.check.version=2.1.0
+
+vhallyun.appid=285e36eb
+vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
