--- a/medical-provider/src/main/resources/env-prod/config.properties
+++ b/medical-provider/src/main/resources/env-prod/config.properties
@@ -52,3 +52,6 @@ online.apprentice.apply.fail.sms.code=SMS_139229517
 online.treatment.apply.success.sms.code=SMS_139976012
 online.treatment.apply.fail.sms.code=SMS_139971008
 online.treatment.apply.cancel.sms.code=SMS_140730221
+
+vhallyun.appid=285e36eb
+vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
