--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -94,3 +94,6 @@ weixin.course.admin.apply.code=7M0owccIOrMu2gVuJmSRx9GXhd0eEu-l4c12xA5zY_s
 
 weixin.enchashment.pass.code=rgizW5ohNTicAme6Xk7Kcu-vfP0GKgGUHmpjmbg4M6I
 weixin.enchashment.not.pass.code=sbjL0u0CZPrW-UzxU6IGxwaCYMbqTA-Ine8OFJ_QjTM
+
+vhallyun.appid=285e36eb
+vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
