增加sql DDL 语句记录。修改弟子10分钟预约提示

--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -75,7 +75,7 @@ sms.not.live.course.apply.pass.code=SMS_135036647
 sms.course.apply.not.pass.code=SMS_137673284
 
 #æ¨ç${type}ç³è¯·å·²äº${date}éè¿è®¤è¯ï¼ç°å¨æ¨å·²ç»æ¯ä¸åä¸»æ­äºï¼å¿«å»åå¸è¯¾ç¨å§~å¦éå¸®å©è¯·èç³»å®¢æ0898-32881934ã
-sms.anchor.approve.pass.code=SMS_137668244
+sms.anchor.approve.pasSMS_1429472567668244
 #æ¨ç${type}è®¤è¯æªè½éè¿ï¼åå : ${reason}ï¼å¦æçé®è¯·èç³»å®¢æ0898-32881934ã
 sms.anchor.approve.notPass.code=SMS_137673285
 
