修改cc转码成功后，回调的地址

--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -65,7 +65,7 @@ cc.live.user.id=B5E673E55C702C42
 cc.api.key=K45btKhytR527yfTAjEp6z4fb3ajgu66
 cc.live.api.key=im03hT0UUNqpjPBbPzdcVRkcVllgDXvj
 cc.player.id=E92940E0788E2DAE
-cc.uploadCallback.url=https://cs.xczhihui.com/videoRes/updateCourseApplyResource
+cc.uploadCallback.url=http://cs.manager.xczhihui.com:28080/videoRes/updateCourseApplyResource
 
 #微信支付配置
 wechat.app.id=wx48d230a99f1c20d9
