--- a/shop-provider/pom.xml
+++ b/shop-provider/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.xczhihui</groupId>
-    <artifactId>medical-provider</artifactId>
+    <artifactId>shop-provider</artifactId>
     <packaging>war</packaging>
     <version>3.0.0-SNAPSHOT</version>
 
@@ -20,7 +20,6 @@
         <aspectjweaver.version>1.8.8</aspectjweaver.version>
         <fileupload.version>1.3.1</fileupload.version>
         <jstl.version>1.2</jstl.version>
-        <jedis.version>2.9.0</jedis.version>
     </properties>
 
     <dependencies>
@@ -32,9 +31,10 @@
         </dependency>
         <dependency>
             <groupId>com.xczhihui</groupId>
-            <artifactId>medical-api</artifactId>
+            <artifactId>shop-api</artifactId>
             <version>3.0.0-SNAPSHOT</version>
         </dependency>
+
 
         <!-- JUnit -->
         <dependency>
@@ -159,12 +159,17 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
         </dependency>
+        <!--<dependency>-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
             <version>4.3.6.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
         <!-- 模板引擎 -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
@@ -172,8 +177,8 @@
             <version>2.0</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -209,10 +214,6 @@
             <version>0.1</version>
             <exclusions>
                 <exclusion>
-                    <groupId>org.apache.zookeeper</groupId>
-                    <artifactId>zookeeper</artifactId>
-                </exclusion>
-                <exclusion>
                     <groupId>log4j</groupId>
                     <artifactId>log4j</artifactId>
                 </exclusion>
@@ -232,58 +233,15 @@
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
                 <exclusion>
-                    <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-api</artifactId>
+                    <groupId>org.slf4j</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
-
-        <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.6</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpmime</artifactId>
-            <version>4.3.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>4.3.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <!-- <version>4.3.2</version> -->
-            <version>4.4.5</version>
-        </dependency>
-
-        <!--jedis-->
-        <dependency>
-            <groupId>redis.clients</groupId>
-            <artifactId>jedis</artifactId>
-            <version>${jedis.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>1.8.6.RELEASE</version>
-        </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.json-lib</groupId>
-            <artifactId>json-lib</artifactId>
-            <version>2.4</version>
-            <classifier>jdk15</classifier>
         </dependency>
     </dependencies>
 
@@ -294,7 +252,6 @@
                 <env>env-dev-local</env>
             </properties>
         </profile>
-
 
         <profile>
             <id>dev</id>
@@ -322,7 +279,7 @@
     </profiles>
 
     <build>
-        <finalName>medical-provider</finalName>
+        <finalName>shop-provider</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -343,9 +300,9 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <!--<includes>-->
-                <!--<include>*.*</include>-->
-                <!--</includes>-->
+                <!--<includes> -->
+                <!--<include>*.*</include> -->
+                <!--</includes> -->
                 <filtering>true</filtering>
                 <excludes>
                     <exclude>
