--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <dom4j-version>1.4-dev-8</dom4j-version>
         <commons-dbutils-version>1.6</commons-dbutils-version>
         <ipandatcm-version>3.0.0-SNAPSHOT</ipandatcm-version>
+        <curator.version>2.8.0</curator.version>
     </properties>
 
     <!-- 待聚合模块 -->
@@ -95,6 +96,11 @@
             <dependency>
                 <groupId>com.xczhihui</groupId>
                 <artifactId>course-api</artifactId>
+                <version>${ipandatcm-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.xczhihui</groupId>
+                <artifactId>shop-api</artifactId>
                 <version>${ipandatcm-version}</version>
             </dependency>
 
@@ -319,7 +325,7 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
-                <version>2.5.3</version>
+                <version>2.5.9</version>
                 <exclusions>
                     <exclusion>
                         <groupId>org.springframework</groupId>
