--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -42,6 +42,12 @@
         <dependency>
             <groupId>com.xczhihui</groupId>
             <artifactId>common-support</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate</groupId>
+                    <artifactId>hibernate-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -52,6 +58,17 @@
         <dependency>
             <groupId>com.xczhihui</groupId>
             <artifactId>common-pay</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>shop-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.0.12.Final</version>
         </dependency>
 
         <dependency>
@@ -103,6 +120,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
+            <version>2.5.9</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.springframework</groupId>
