--- a/medical-api/pom.xml
+++ b/medical-api/pom.xml
@@ -27,6 +27,12 @@
             <groupId>com.xczhihui</groupId>
             <artifactId>common-exception</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-util</artifactId>
+        </dependency>
+        
         <!-- Mybatis-Plus -->
         <dependency>
             <groupId>com.baomidou</groupId>
