--- a/wechat/pom.xml
+++ b/wechat/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>common-pay</artifactId>
         </dependency>
 
+ 		<dependency>
+  			<groupId>com.xczhihui</groupId>
+    		<artifactId>shop-api</artifactId>
+    		<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+        
         <dependency>
             <groupId>com.xczhihui</groupId>
             <artifactId>shop-api</artifactId>
