[feat]商家账号免密登录

--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -60,6 +60,8 @@ env.flag=test
 domain=ixincheng.com
 cookieTokenName=_uc_t_manager_test
 
+shop.url=https://cs.xczhihui.com
+
 #ç¼å·${orderNo}æç°ç³è¯·å·²éè¿å®¡æ ¸,1-3ä¸ªå·¥ä½æ¥ååæ¾æåï¼~
 sms.enhashment.pass.code=SMS_135041785
 #ç¼å·${orderNo}æç°ç³è¯·å·²éè¿å®¡æ ¸å¹¶ææ¬¾ï¼72å°æ¶åå°è´¦ï¼è¯·æ³¨ææ¥æ¶~
