--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -57,6 +57,7 @@
     </profiles>
 
     <build>
+        <finalName>shop</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
