[fix]fix dev-local redis host

--- a/online-web/src/main/resources/env-dev-local/config.properties
+++ b/online-web/src/main/resources/env-dev-local/config.properties
@@ -49,7 +49,7 @@ email.host=smtp.ixincheng.com
 email.user=system@ixincheng.com
 email.password=Ixincheng123456
 
-redis.host=redis-server
+redis.host=127.0.0.1
 redis.port=6379
 #最大空闲连接数
 reids.maxIdle=10
