--- a/user-center-provider/src/main/resources/env-dev-local/config.properties
+++ b/user-center-provider/src/main/resources/env-dev-local/config.properties
@@ -16,7 +16,7 @@ dubbo.protocol.port=50881
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
 
-redis.host=redis-server
+redis.host=127.0.0.1
 redis.port=6379
 #最大空闲连接数
 reids.maxIdle=10
