--- a/shop/src/main/resources/env-test/shopxx.properties
+++ b/shop/src/main/resources/env-test/shopxx.properties
@@ -85,7 +85,7 @@ connection_pools.checkout_timeout=60000
 
 #------------ JDBC ------------
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73.mysql.zhangbei.rds.aliyuncs.com:3306/demo_shopxxb2b2c?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73.mysql.zhangbei.rds.aliyuncs.com:3306/test_shopxxb2b2c?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=troot
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
