[feat]订单支付相关，新增shop.url

--- a/wechat/src/main/resources/env-prod/config.properties
+++ b/wechat/src/main/resources/env-prod/config.properties
@@ -137,3 +137,5 @@ ios.check.version=2.1.0
 
 vhallyun.appid=285e36eb
 vhallyun.secretkey=b4896977740200695d9e291cc9d2b2d0
+
+shop.url=http://shop.ipandatcm.com
