--- a/wechat/src/main/resources/env-test/config.properties
+++ b/wechat/src/main/resources/env-test/config.properties
@@ -134,3 +134,5 @@ ios.check.version=0.0.0
 
 vhallyun.appid=fbc17706
 vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
+
+shop.url=http://cs.shop.xczhihui.com
