--- a/wechat/src/main/resources/env-dev-local/config.properties
+++ b/wechat/src/main/resources/env-dev-local/config.properties
@@ -137,3 +137,5 @@ ios.check.version=0.0.0
 
 vhallyun.appid=fbc17706
 vhallyun.secretkey=dae59c60086fd00958eafd2a435a1218
+
+shop.url=http://127.0.0.1:8282
