[feat]订单支付相关

--- a/shop/src/main/resources/env-dev-local/shopxx.properties
+++ b/shop/src/main/resources/env-dev-local/shopxx.properties
@@ -15,7 +15,7 @@
 	#------------ Template ------------
 	template.loader_path=WEB-INF/ipandatcm-template/
 	template.encoding=UTF-8
-	template.update_delay=3600
+	template.update_delay=0
 	template.number_format=0.######
 	template.boolean_format=true,false
 	template.datetime_format=yyyy-MM-dd
@@ -123,7 +123,8 @@
 	dubbo.protocol.port=50555
 	dubbo.consumer.timeout=15000
 	dubbo.provider.timeout=15000
-	
+
+	ipandatcm.url=http://dev-www.xczhihui.com:8888/
 	
 	# redis 配置
 	redis.host=redis-server
