--- a/shop/src/main/resources/env-dev/shopxx.properties
+++ b/shop/src/main/resources/env-dev/shopxx.properties
@@ -15,7 +15,7 @@ force_download_content_type=application/force-download
 #------------ Template ------------
 template.loader_path=WEB-INF/ipandatcm-template/
 template.encoding=UTF-8
-template.update_delay=3600
+template.update_delay=0
 template.number_format=0.######
 template.boolean_format=true,false
 template.datetime_format=yyyy-MM-dd
@@ -124,3 +124,15 @@ dubbo.protocol.port=50555
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
 
+ipandatcm.url=http://dev-www.xczhihui.com:8888/
+
+# redis 配置
+redis.host=redis-server
+#redis端口，成都(182.48.112.83)写56379，北京(172.16.1.18)写6379
+redis.port=6379
+#最大空闲连接数
+reids.maxIdle=10
+#最大连接数
+reids.maxTotal=500
+#超时时间，毫秒
+reids.timeout=20000
