[fix]修改平台地址配置

--- a/shop/src/main/resources/env-test/shopxx.properties
+++ b/shop/src/main/resources/env-test/shopxx.properties
@@ -124,7 +124,7 @@ dubbo.protocol.port=50555
 dubbo.consumer.timeout=15000
 dubbo.provider.timeout=15000
 
-ipandatcm.url=http://cs.m.ipandatcm.com
+ipandatcm.url=http://cs.m.xczhihui.com
 
 # redis ≈‰÷√
 redis.host=redis-server
