[feat]商城域名更新

--- a/online-manager/src/main/resources/env-test/config.properties
+++ b/online-manager/src/main/resources/env-test/config.properties
@@ -60,7 +60,7 @@ env.flag=test
 domain=ixincheng.com
 cookieTokenName=_uc_t_manager_test
 
-shop.url=https://cs.xczhihui.com
+shop.url=http://cs.shop.xczhihui.com
 
 #ç¼å·${orderNo}æç°ç³è¯·å·²éè¿å®¡æ ¸,1-3ä¸ªå·¥ä½æ¥ååæ¾æåï¼~
 sms.enhashment.pass.code=SMS_135041785
