--- a/shop-api/pom.xml
+++ b/shop-api/pom.xml
@@ -32,5 +32,11 @@
             <version>RELEASE</version>
         </dependency>
         
+         <dependency>
+            <groupId>com.xczhihui</groupId>
+            <artifactId>common-support</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
+        
     </dependencies>
 </project>
