--- a/shop/src/main/resources/env-dev/shopxx.properties
+++ b/shop/src/main/resources/env-dev/shopxx.properties
@@ -136,3 +136,5 @@ reids.maxIdle=10
 reids.maxTotal=500
 #≥¨ ± ±º‰£¨∫¡√Î
 reids.timeout=20000
+
+defaultHead=https://file.ipandatcm.com//image/jpg/defaultHead.png
