[feat]新增获取商品详情页地址的接口

--- a/online-web/src/main/resources/env-prod/config.properties
+++ b/online-web/src/main/resources/env-prod/config.properties
@@ -95,6 +95,7 @@ qiniu.bucket=ipandatcm
 #熊猫币比例
 rate=10
 web.url=https://www.ipandatcm.com
+m.web.url=http://m.ipandatcm.com
 env.flag=prod
 email.receiver=yuruixin@ixincheng.com
 
