--- a/online-web/src/main/resources/env-test/config.properties
+++ b/online-web/src/main/resources/env-test/config.properties
@@ -98,6 +98,7 @@ qiniu.bucket=test
 #熊猫币比例
 rate=10
 web.url=https://cs.xczhihui.com
+m.web.url=https://cs.m.xczhihui.com
 env.flag=test
 email.receiver=yuruixin@ixincheng.com
 
