--- a/online-web/src/main/resources/env-dev/config.properties
+++ b/online-web/src/main/resources/env-dev/config.properties
@@ -95,6 +95,7 @@ env.flag=dev
 #熊猫币比例
 rate=10
 web.url=http://dev-www.xczhihui.com
+m.web.url=http://dev-www.xczhihui.com:18080
 email.receiver=yuruixin@ixincheng.com
 
 weixin.course.pay.code=occTwL_zt1MyfzeaQy0LeYA5iEPpLn2CQJelFXjySjQ
