--- a/shop/src/main/resources/env-prod/shopxx.properties
+++ b/shop/src/main/resources/env-prod/shopxx.properties
@@ -86,7 +86,7 @@ connection_pools.checkout_timeout=60000
 
 #------------ JDBC ------------
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-8vb7muj93vyra1c73oo.mysql.zhangbei.rds.aliyuncs.com:3306/ipandatcm-shop?useUnicode=true&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://rm-8vb0kxo5629p1f405.mysql.zhangbei.rds.aliyuncs.com:3306/ipandatcm-shop?useUnicode=true&characterEncoding=UTF-8
 jdbc.username=ixincheng
 jdbc.password=D1a6t8As34iEc7oweo3Dnf
 
