[fix]modify shop.url

--- a/online-manager/src/main/resources/env-prod/config.properties
+++ b/online-manager/src/main/resources/env-prod/config.properties
@@ -60,7 +60,7 @@ env.flag=prod
 domain=ipandatcm.com
 cookieTokenName=_uc_t_manager
 
-shop.url=https://www.ipandatcm.com
+shop.url=http://shop.ipandatcm.com
 
 #ç¼å·${orderNo}æç°ç³è¯·å·²éè¿å®¡æ ¸,1-3ä¸ªå·¥ä½æ¥ååæ¾æåï¼~
 sms.enhashment.pass.code=SMS_135041785
